tests/errors/2017-2.vb
'#compiler-options:/reference:xxx
'#compiler-message:Command line error BC2017 : could not find library 'xxx'
'#exit-code:1